--- a/static/index.html
+++ b/static/index.html
@@ -2,86 +2,153 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chat</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chat with Images</title>
   <style>
-    body { font-family: sans-serif; margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh; }
-    #chat { flex: 1; overflow-y: auto; padding: 10px; }
-    #form { display: flex; gap: 8px; padding: 10px; background: #f0f0f0; }
-    #msg { flex: 1; }
-    #preview { max-width: 100px; max-height: 100px; display: none; margin-left: 10px; }
+    body, html { margin: 0; padding: 0; height: 100%; display: flex; flex-direction: column; font-family: sans-serif; }
+    #chat {
+      flex: 1;
+      overflow-y: auto;
+      padding: 10px;
+      background: #fafafa;
+    }
+    .message {
+      margin-bottom: 8px;
+      word-break: break-word;
+    }
+    .chat-image {
+      max-width: 80%;
+      border-radius: 8px;
+      margin: 5px 0;
+      display: block;
+    }
+    #input-row {
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      background: #eee;
+      position: sticky;
+      bottom: 0;
+      gap: 8px;
+    }
+    #preview {
+      width: 50px;
+      height: 50px;
+      object-fit: cover;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      display: none;
+    }
+    #plus {
+      font-size: 24px;
+      cursor: pointer;
+      user-select: none;
+    }
+    #msg {
+      flex: 1;
+      min-width: 0;               /* allow it to shrink on small screens */
+      padding: 8px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    #send {
+      padding: 8px 12px;
+      font-size: 16px;
+      border: none;
+      background: #317EFB;
+      color: white;
+      border-radius: 4px;
+    }
+    @media (max-width: 600px) {
+      #msg, #send, #plus { font-size: 18px; }
+      .chat-image { max-width: 100%; }
+    }
   </style>
 </head>
 <body>
+
   <div id="chat"></div>
-  <form id="form">
-    <input type="text" id="msg" autocomplete="off" placeholder="Message...">
-    <input type="file" id="img" accept="image/*" style="display: none;">
-    <button type="button" id="plus">+</button>
-    <button type="submit">Send</button>
-    <img id="preview" src="">
-  </form>
+
+  <div id="input-row">
+    <label id="plus" title="Add image">➕</label>
+    <input type="file" id="img" accept="image/*" style="display:none" />
+    <img id="preview" />
+    <input type="text" id="msg" placeholder="Type a message…" autocomplete="off" />
+    <button id="send">Send</button>
+  </div>
 
   <script>
-    const chat = document.getElementById("chat");
-    const msg = document.getElementById("msg");
-    const form = document.getElementById("form");
-    const imgInput = document.getElementById("img");
-    const plusBtn = document.getElementById("plus");
-    const preview = document.getElementById("preview");
+    const chat = document.getElementById('chat');
+    const plus = document.getElementById('plus');
+    const imgInput = document.getElementById('img');
+    const preview = document.getElementById('preview');
+    const msgInput = document.getElementById('msg');
+    const sendBtn = document.getElementById('send');
 
-    const ws = new WebSocket(`ws://${location.host}/ws`);
+    // Connect WebSocket
+    const ws = new WebSocket(`${location.protocol.replace('http','ws')}//${location.host}/ws`);
+    ws.onmessage = e => {
+      const data = e.data;
+      const div = document.createElement('div');
+      div.className = 'message';
 
-    ws.onmessage = (event) => {
-      const isImage = event.data.startsWith("data:image");
-      const div = document.createElement("div");
-      if (isImage) {
-        const img = document.createElement("img");
-        img.src = event.data;
-        img.style.maxWidth = "200px";
+      if (data.startsWith('data:image/')) {
+        // incoming image
+        const img = document.createElement('img');
+        img.src = data;
+        img.className = 'chat-image';
         chat.appendChild(img);
       } else {
-        div.textContent = event.data;
+        // text or join/leave notice
+        div.textContent = data;
         chat.appendChild(div);
       }
       chat.scrollTop = chat.scrollHeight;
     };
 
-    plusBtn.onclick = () => imgInput.click();
+    // “+” button opens file picker
+    plus.onclick = () => imgInput.click();
 
     imgInput.onchange = () => {
       const file = imgInput.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = (e) => {
-          preview.src = e.target.result;
-          preview.style.display = "block";
-        };
-        reader.readAsDataURL(file);
-      }
+      if (!file) return;
+      // show preview
+      const reader = new FileReader();
+      reader.onload = ev => {
+        preview.src = ev.target.result;
+        preview.style.display = 'block';
+      };
+      reader.readAsDataURL(file);
     };
 
-    form.onsubmit = (e) => {
-      e.preventDefault();
-      const text = msg.value.trim();
+    function doSend() {
+      // if an image is selected, send it first
       const file = imgInput.files[0];
-
       if (file) {
         const reader = new FileReader();
-        reader.onload = (e) => {
-          ws.send(e.target.result); // send base64 image
-          preview.style.display = "none";
-          preview.src = "";
-          imgInput.value = "";
-          if (text) ws.send(text);
-          msg.value = "";
+        reader.onload = ev => {
+          ws.send(ev.target.result);
+          // clear preview + file
+          preview.style.display = 'none';
+          preview.src = '';
+          imgInput.value = '';
         };
         reader.readAsDataURL(file);
-      } else if (text) {
-        ws.send(text);
-        msg.value = "";
       }
-    };
+      // then send text if any
+      const text = msgInput.value.trim();
+      if (text) {
+        ws.send(text);
+        msgInput.value = '';
+      }
+    }
+
+    sendBtn.onclick = doSend;
+    msgInput.addEventListener('keydown', e => {
+      if (e.key === 'Enter') doSend();
+    });
   </script>
+
 </body>
 </html>
