--- a/static/index.html
+++ b/static/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Chat with Images</title>
   <style>
-    body, html { margin: 0; padding: 0; height: 100%; display: flex; flex-direction: column; font-family: sans-serif; }
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      font-family: sans-serif;
+    }
     #chat {
       flex: 1;
       overflow-y: auto;
@@ -17,10 +24,11 @@
       word-break: break-word;
     }
     .chat-image {
-      max-width: 80%;
+      max-width: 192px;
+      max-height: 192px;
       border-radius: 8px;
       margin: 5px 0;
-      display: block;
+      cursor: pointer;
     }
     #input-row {
       display: flex;
@@ -38,6 +46,7 @@
       border: 1px solid #ccc;
       border-radius: 4px;
       display: none;
+      cursor: pointer;
     }
     #plus {
       font-size: 24px;
@@ -46,7 +55,7 @@
     }
     #msg {
       flex: 1;
-      min-width: 0;               /* allow it to shrink on small screens */
+      min-width: 0;
       padding: 8px;
       font-size: 16px;
       border: 1px solid #ccc;
@@ -73,7 +82,7 @@
   <div id="input-row">
     <label id="plus" title="Add image">➕</label>
     <input type="file" id="img" accept="image/*" style="display:none" />
-    <img id="preview" />
+    <img id="preview" title="Click to send full image"/>
     <input type="text" id="msg" placeholder="Type a message…" autocomplete="off" />
     <button id="send">Send</button>
   </div>
@@ -86,34 +95,13 @@
     const msgInput = document.getElementById('msg');
     const sendBtn = document.getElementById('send');
 
-    // Connect WebSocket
-    const ws = new WebSocket(`${location.protocol.replace('http','ws')}//${location.host}/ws`);
-    ws.onmessage = e => {
-      const data = e.data;
-      const div = document.createElement('div');
-      div.className = 'message';
-
-      if (data.startsWith('data:image/')) {
-        // incoming image
-        const img = document.createElement('img');
-        img.src = data;
-        img.className = 'chat-image';
-        chat.appendChild(img);
-      } else {
-        // text or join/leave notice
-        div.textContent = data;
-        chat.appendChild(div);
-      }
-      chat.scrollTop = chat.scrollHeight;
-    };
-
-    // “+” button opens file picker
+    // Open standard picker (on iOS this is photo library)
     plus.onclick = () => imgInput.click();
 
+    // Show preview thumbnail and allow click-to-view full
     imgInput.onchange = () => {
       const file = imgInput.files[0];
       if (!file) return;
-      // show preview
       const reader = new FileReader();
       reader.onload = ev => {
         preview.src = ev.target.result;
@@ -122,21 +110,43 @@
       reader.readAsDataURL(file);
     };
 
+    // Click preview to open full image in new tab
+    preview.onclick = () => {
+      if (preview.src) window.open(preview.src, '_blank');
+    };
+
+    // WebSocket setup
+    const ws = new WebSocket(`${location.protocol.replace('http','ws')}//${location.host}/ws`);
+    ws.onmessage = e => {
+      const data = e.data;
+      if (data.startsWith('data:image/')) {
+        const img = document.createElement('img');
+        img.src = data;
+        img.className = 'chat-image';
+        img.onclick = () => window.open(data, '_blank');
+        chat.appendChild(img);
+      } else {
+        const div = document.createElement('div');
+        div.className = 'message';
+        div.textContent = data;
+        chat.appendChild(div);
+      }
+      chat.scrollTop = chat.scrollHeight;
+    };
+
+    // Send image (first) then text
     function doSend() {
-      // if an image is selected, send it first
       const file = imgInput.files[0];
       if (file) {
         const reader = new FileReader();
         reader.onload = ev => {
           ws.send(ev.target.result);
-          // clear preview + file
           preview.style.display = 'none';
           preview.src = '';
           imgInput.value = '';
         };
         reader.readAsDataURL(file);
       }
-      // then send text if any
       const text = msgInput.value.trim();
       if (text) {
         ws.send(text);
